--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,16 +24,16 @@
     </div>
 
  
-    <% if user_signed_in? && (@item.user.id == current_user.id) %> 
-    <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
-    <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
-    <% end %>
-
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-     <% if user_signed_in? && (@item.user.id != current_user.id) %> 
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <% if user_signed_in? %> 
+     <% if @item.user.id == current_user.id %>
+     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
+     <p class="or-text">or</p>
+     <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+     <% else %>
+     <%# 商品が売れていない場合はこちらを表示しましょう %>
+     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
      <% end %>
+    <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
     
