--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -14,10 +14,10 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "商品名#{item.item_name}" %>
+            <%= item.item_name %>
           </h3>
           <div class='item-price'>
-            <span><%= "販売価格#{item.item_price}" %>円<br><%= "配送料負担#{item.item_shipping_fee_status.name}" %></span>
+            <span><%= item.item_price %>円<br><%= item.item_shipping_fee_status.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
